# Modern-GPTRL-PyTorch

./: .gitignore  CONTRIBUTORS.md  DEVELOPERS.md  Dockerfile.cpu  Dockerfile.gpu  README.md  model_card.md  pyproject.toml  requirements.txt
GPT-2/: README.md  generate_gpt2.py  gpt2_model.py  train_gpt2.py
GRPO/: README.md  grpo_agent.py  train_grpo.py
a2c/: README.md  a2c_agent.py  train_a2c.py
acktr/: README.md  acktr_agent.py  kfac.py  train_acktr.py
ddpg/: README.md  ddpg_agent.py  train_ddpg.py
deepq/: README.md  dqn_agent.py  train_dqn.py
her/: README.md  her_agent.py  her_replay_buffer.py  train_her.py
learning-to-learn/: README.md  l2l_optimizer.py  train_l2l.py
maddpg/: README.md  maddpg_agent.py  simple_mpe.py  train_maddpg.py
muzero/: README.md  mcts.py  muzero_model.py  train_muzero.py
ppo/: README.md  ppo_agent.py  train_ppo.py
q-learning/: README.md  q_learning_agent.py  train_ql.py
sam/: README.md  sam_optimizer.py  segment_anything.py
tests/: run_all_tests.py  test_a2c.py  test_dqn.py  test_gpt2.py  test_ppo.py
trpo/: README.md  train_trpo.py  trpo_agent.py
unlabel/minimind/: README.md  minimind_model.py  train_minimind.py
weak-to-strong/: README.md  train_w2s.py  w2s_agent.py
